--- a/index.html
+++ b/index.html
@@ -103,9 +103,13 @@
         <tr>
             <td>
                 <select id="experimentSelect">
-                    <option value="experimento1">Experimento 1</option>
-                    <option value="experimento2">Experimento 2</option>
-                    <option value="experimento3">Experimento 3</option>
+                    <option value="Experimento1">Experimento 1</option>
+                    <option value="Experimento2">Experimento 2</option>
+                    <option value="Experimento3">Experimento 3</option>
+                    <option value="Experimento4">Experimento 4</option>
+                    <option value="Experimento5">Experimento 5</option>
+                    <option value="Experimento6">Experimento 6</option>
+                    <option value="Experimento7">Experimento 7</option>
                 </select>
             </td>
             <td id="selectContainer">
