--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
             border: 1px solid #ddd;
             text-align: center;
         }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
+        
+        iframe {
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -143,10 +152,14 @@
         var secondSelectCreated = false;
 
         // Función para cargar contenido directamente
-        function loadContent(url) {
+        function loadContent(url1, url2) {
             var contenidoDiv = document.getElementById("contenido");
-            if (url) {
-                contenidoDiv.innerHTML = '<iframe src="' + url + '" width="840" height="640"></iframe>';
+            if (url1 && url2) {
+                contenidoDiv.innerHTML = `
+                    <div class="image-container">
+                        <iframe src="${url1}" width="420" height="640"></iframe>
+                        <iframe src="${url2}" width="420" height="640"></iframe>
+                    </div>`;
             } else {
                 contenidoDiv.innerHTML = ""; 
             }
@@ -157,7 +170,7 @@
             switch (category) {
                 case "Experimento5":
                     // Mostrar automáticamente las imágenes de "First steps" y "Final steps" para Experimento 5
-                    loadContent("https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/UMAP/Exp5/Exp5_first_steps.html");
+                    loadContent("https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/UMAP/Exp5/Exp5_first_steps.html","https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/UMAP/Exp5/Exp5_final_steps.html");
                     setTimeout(function() {
                         loadContent("https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/UMAP/Exp5/Exp5_final_steps.html");
                     }, 3000); // Cambia el tiempo de espera si es necesario
