--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
 <header>
     <div class="logo-container">
-        <img src="ruta_del_logo_universidad.png" alt="Logo Universidad" class="logo">
+        <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Unizar.png" alt="Logo Universidad" class="logo">
         <h1>Assessing the Impact and Potential of TTS for Pathological Voice Data Augmentation on Pathology Detection Systems</h1>
-        <img src="ruta_del_logo_grupo_investigacion.png" alt="Logo Grupo Investigación" class="logo">
+        <img src="https://santirf01.github.io/DA_TTS_THL_AVDD.github.io/Imagenes/Vivolab.png" alt="Logo Grupo Investigación" class="logo">
     </div>
 </header>
 
